--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
     --main-2 : #292929;
     --accent : #e20000;
     --accent-2 : #b60000;
-    --text : rgb(73, 73, 73);
+    --text : rgb(124, 124, 124);
 }
 * {
     margin: 0;
@@ -13,7 +13,7 @@
     border: none;
     box-sizing: border-box;
     transition: all 0.3s ease-in-out;
-    font-size: 12px;
+    font-size: 10px;
     color: var(--text);
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
@@ -21,15 +21,13 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: var(--main);
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(10, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    display: flex;
 }
 #status-section {
-    grid-area: 1 / 1 / 11 / 3;
+    width: 20%;
+    height: 100%;
     float: left;
+    background-color: var(--main-2);
 }
 #profile {
     width: 100%;
@@ -38,7 +36,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: var(--accent);
-    box-shadow: inset -4px -4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0px -16px 5px var(--main-2);
 }
 #profile img {
     width: 100px;
@@ -58,8 +56,8 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
     text-transform: uppercase;
+    padding: 2px;
     text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.2);
 }
 #myInfo .infoLeft {
@@ -67,9 +65,10 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    text-align: right;
+    text-align: left;
     padding: 2px;
     line-height: 20px;
+    padding-left: 10px;
 }
 #myInfo .infoRight {
     width: 70%;
@@ -79,14 +78,44 @@ body {
     padding: 2px;
     line-height: 20px;
 }
+#skillSet {
+    width: 100%;
+    height: 60%;
+    padding-top: 10px;
+}
+#skillSet .skill {
+    padding: 5px;
+}
+#skillSet .skill .skillMeter {
+    width: 100%;
+    height: 8px;
+    background-color: var(--main-2);
+    padding: 2px;
+    border-radius: 30px;
+    margin-block: 5px;
+} 
+#skillSet .skill .skillMeter div {
+    height: 100%;
+    background-color: var(--accent);
+    border-radius: 30px;
+}
 
+
+#sider {
+    width: 80%;
+    height: 100%;
+}
 #banner-section {
-    grid-area: 1 / 3 / 4 / 11;
-    background-color: blue;
-    float: right;
+    width: 100%;
+    height: 30%;
+    background-image: url(img/banner.jpeg);
+    background-size: cover;
+    background-position: center;
+    padding: 10px;
+    box-shadow: inset 0px -16px 10px var(--main);
 }
 #content-section {
-    grid-area: 4 / 3 / 11 / 11;
-    background-color: yellow;
+    width: 100%;
+    height: 70%;
     float: right;
 }
