--- a/src/style.css
+++ b/src/style.css
@@ -2,9 +2,26 @@
     --main : #0f0f0f;
     --main-2 : #292929;
     --accent : #e20000;
-    --accent-2 : #b60000;
     --text : rgb(124, 124, 124);
 }
+
+@keyframes profileVisible {
+    from {
+        opacity: 0;
+        scale: 0;
+    } to {
+        opacity: 1;
+        scale: 1;
+    }
+}
+@keyframes progressBar {
+    from {
+        width: 0;
+    } to {
+        width: var(--target);
+    }
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -46,6 +63,7 @@ body {
     border-radius: 50%;
     border: 4px solid var(--main);
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+    animation: normal "profileVisible" 1s;
 }
 #profile img:hover {
     scale: 1.1;
@@ -100,6 +118,8 @@ body {
     height: 100%;
     background-color: var(--accent);
     border-radius: 30px;
+    animation: normal "progressBar" 1s;
+    width: var(--target);
 }
 
 /* SIDER SECTION */
@@ -127,14 +147,14 @@ body {
     float: right;
     padding: 10px;
 }
-#show-case {
+.showCase {
     width: 100%;
     height: 70vh;
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
 }
-#show-case .products {
+.showCase .webProducts {
     flex: 0 0 calc(33.33% - 10px);
     background-color: var(--main-2);
     border-radius: 10px;
@@ -142,25 +162,70 @@ body {
     display: flex;
     flex-wrap: wrap;
 }
-#show-case .products:hover {
+.showCase .webProducts:hover {
     outline: 1px solid var(--accent);
     background-color: #3a3a3a;
 }
-#show-case .products h2 {
+.showCase .musicProducts {
+    flex: 0 0 calc(20% - 10px);
+    height: 200px;
+    background-color: var(--main-2);
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.showCase .musicProducts:hover {
+    outline: 1px solid var(--accent);
+    background-color: #3a3a3a;
+}
+.showCase .webProducts h2 {
     font-size: 2rem;
     color: white;
+    text-transform: uppercase;
 }
-#show-case .products p {
+.showCase .musicProducts h2 {
+    font-size: 2rem;
+    color: white;
+    text-transform: uppercase;
+    width: 100%;
+    height: 10%;
+}
+.showCase .webProducts p {
     font-size: 1.5em;
     margin: 10px;
     font-style: italic;
 }
-#show-case .products a {
+.showCase .webProducts a {
     width: 100%;
     font-size: 1.5em;
     text-decoration: underline;
     text-align: center;
 }
-#show-case .products a:hover {
+.showCase .webProducts a:hover {
     color: var(--accent);
+}
+.showCase .musicProducts div {
+    width: 100%;
+    height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.5;
+}
+.showCase .musicProducts img {
+    width: 150px;
+    height: 150px;
+}
+.showCase .musicProducts button {
+    width: 100%;
+    height: 20% ;
+    background-color: var(--main);
+    border-radius: 10px;
+}
+.showCase .musicProducts button:hover {
+    background-color: #292929;
+}
+.showCase .musicProducts button i {
+    color: white;
 }
