--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
     --main : #0f0f0f;
     --main-2 : #292929;
     --accent : #e20000;
+    --accent-2 : #ff3b3b;
     --text : rgb(124, 124, 124);
 }
 
@@ -55,6 +56,56 @@ body {
     height: 100vh;
     background-color: var(--main);
     display: flex;
+}
+
+/* NAVIGATION BUTTON */
+#nav-section {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 100;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    flex-wrap: wrap;
+}
+#navigation {
+    width: 50px;
+    height: 50px;
+    background-color: var(--accent);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
+    margin: 5px;
+}
+#nav-section a {
+    width: 50px;
+    height: 50px;
+    background-color: var(--main-2);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
+    outline: 1px solid black;
+    margin: 5px;
+}
+#navigation:hover {
+    background-color: var(--accent-2);
+}
+#nav-section a:hover {
+    outline: 1px solid var(--accent);
+    background-color: #3a3a3a;
+}
+#navigation i, #nav-section a i {
+    font-size: 3rem;
+    color: white;
+}
+#nav-section a {
+    display: none;
 }
 
 /* STATUS SECTION */
@@ -159,16 +210,22 @@ body {
     gap: 30px;
     padding: 30px;
 }
-#banner-section .counter{
+#banner-section .counter {
     flex: 0 0 calc(50% - 30px);
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 20px;
-    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4),
+                inset -1px -1px 10px white;
     padding: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+    backdrop-filter: blur(10px);
     flex-wrap: wrap;
+}
+#banner-section .counter:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(20px);
 }
 #banner-section .counter h1 {
     font-size: 6rem;
