--- a/src/style.css
+++ b/src/style.css
@@ -176,6 +176,9 @@ body {
     position: fixed;
     margin: 20px;
     z-index: 100;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 20px;
 }
 #sider-control button {
     width: 50px;
@@ -205,6 +208,75 @@ body {
     float: right;
 }
 
+/* HOME SECTION */
+#home-section {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#home-section .landingImage {
+    width: 300px;
+    height: 400px;
+    border-radius: 50%;
+    background-image: url("img/landing-photo.jpeg");
+    background-position: center;
+    background-size: cover;
+    margin: 0 20px;
+}
+#home-section .catalogue {
+    width: 500px;
+    height: 400px;
+    padding-top: 40px;
+}
+#home-section .catalogue h1 {
+    font-size: 3rem;
+    text-transform: uppercase;
+}
+#home-section .catalogue span {
+    font-size: 2em;
+    width: 100%;
+    text-transform: uppercase;
+}
+#home-section .catalogue ul {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+#home-section .catalogue ul li {
+    height: 50px;
+    padding: 10px;
+    margin: 5px;
+    background-color: var(--main-2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5em;
+    color: white;
+}
+#home-section .catalogue ul li:hover {
+    background: #3a3a3a;
+}
+#home-section .catalogue a {
+    width: 150px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2em;
+    color: white;
+    margin-top: 40px;
+    border: 2px solid var(--accent);
+    scroll-behavior: smooth;
+}
+#home-section .catalogue a:hover {
+    background-color: var(--accent);
+    box-shadow: 0 0 20px var(--accent);
+}
+
 /* BANNER SECTION */
 #banner-section {
     width: 100%;
@@ -213,10 +285,11 @@ body {
     background-size: cover;
     background-position: center;
     padding: 10px;
-    box-shadow: inset 0px -16px 10px var(--main);
+    box-shadow: inset 0px -16px 24px var(--main),
+                inset 0px 16px 24px var(--main);
     display: flex;
-    gap: 30px;
     padding: 30px;
+    justify-content:space-between;
 }
 #banner-section .counter {
     flex: 0 0 calc(50% - 30px);
